Fix back-flowing tags list in post summaries.
css/blog.sass
	-If a post's title were too short, its tags list in the post
	summary would flow back onto the preceding line. Fix by
	specifying `block` display.

--- a/css/blog.sass
+++ b/css/blog.sass
@@ -44,8 +44,11 @@ ul#posts
 					color: $baseColor1
 					float: right
 
-			span.tags
-				color: $baseColor1
+				>div
+					display: block
+
+					span.tags
+						color: $baseColor1
 
 		>div.excerpt
 			font-size: 0.8em
